--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
            
-            <font face = "Comic sans MS" size =" 4" style="color:#D1F2EB; ">1.Image Management</font><br>
-            <font face = "Comic sans MS" size =" 4" style="color:#D1F2EB  ; ">2.Renaming Files</font><br>
+            <font face = "Comic sans MS" size =" 4" style="color:#D1F2EB; "><strong>1.Image Manipulation application:</strong> built using Pillow.<br> This application lets the user perform the following: Rotate a set of images, Convert them into black and white images,Blur those images, Change the size of the images and Save them to a destination folder. </font><br>
+            <font face = "Comic sans MS" size =" 4" style="color:#D1F2EB  ; "><strong>2.Rename File application:</strong> built using Tkinter .<br>This applications lets the user to rename all the images in a folder.</font><br>
 
           </div>
         </div>
